syntax = "proto3";

option java_package = "com.github.byakkili.bim.protobuf";
option java_multiple_files = false;

// 聊天
message Chat {
    int64 seq = 1; // 序列号
    string to = 2;
    string content = 3;
    Command cmd = 4;
    MsgType msgType = 5;
    ChatType chatType = 6;
}

// 消息类型
enum MsgType {
    TEXT = 0;
    IMAGE = 1;
    VOICE = 2;
    VIDEO = 3;
}

// 聊天类型
enum ChatType {
    PRIVATE = 0;
    GROUP = 1;
}

// Command
enum Command {
    CHAT = 0;
    CHAT_ACK = 1;
}